<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".adapter_pacientes">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="104dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circlepa2"
            android:layout_width="74dp"
            android:layout_height="61dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:src="@drawable/microsoft2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.372" />

        <TextView
            android:id="@+id/textViewp25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/textviewp25"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/circlepa2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewp26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="3dp"
            android:text="@string/textviewp26"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="10sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/circlepa2"
            app:layout_constraintTop_toBottomOf="@+id/textViewp27" />


        <TextView
            android:id="@+id/textViewp27"
            android:layout_width="200dp"
            android:layout_height="19dp"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="4dp"
            android:text="@string/textviewp27"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp"
            android:textStyle="normal|italic"
            app:layout_constraintStart_toEndOf="@+id/circlepa2"
            app:layout_constraintTop_toBottomOf="@+id/textViewp25" />

        <ImageView
            android:id="@+id/imageViewx"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/all"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewx2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/mundo" />

        <ImageView
            android:id="@+id/imageViewx2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="250dp"
            android:layout_marginLeft="250dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/all"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageViewx"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/mundo" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>